# ssdc

./: BUILD.bazel  WORKSPACE  deps.bzl  go.mod  go.sum
.github/workflows/: go.yml
cache/: BUILD.bazel  cache.go  cache_test.go  lru.go
cluster/: BUILD.bazel  cluster.go
cmd/cache/: BUILD.bazel  main.go
cmd/client/: BUILD.bazel  main.go
cmd/server/: BUILD.bazel  main.go
db/: BUILD.bazel  db.go  memdb.go
examples/: BUILD.bazel  store.go
examples/cache/: BUILD.bazel  main.go
examples/client/: BUILD.bazel  main.go
examples/db/: BUILD.bazel  memdb.go  sql.go
examples/proto/data/: BUILD.bazel  data.pb.go  data.proto
examples/server/: BUILD.bazel  main.go
examples/tests/: a  devLoadTest.sh
proto/: cache.proto
proto/cache/: BUILD.bazel  cache.pb.go  cache.proto  cache_grpc.pb.go
server/: BUILD.bazel  server.go
sync/: BUILD.bazel  sync.go
