load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cache",
    srcs = [
        "cache.go",
        "lru.go",
    ],
    importpath = "github.com/radek-ryckowski/ssdc/cache",
    visibility = ["//visibility:public"],
    deps = [
        "//db",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
    ],
)
