load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cluster",
    srcs = ["cluster.go"],
    importpath = "github.com/radek-ryckowski/ssdc/cluster",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/cache",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
