load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "examples_lib",
    srcs = ["store.go"],
    importpath = "github.com/radek-ryckowski/ssdc/examples",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "examples",
    embed = [":examples_lib"],
    visibility = ["//visibility:public"],
)
