load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "sync",
    srcs = ["sync.go"],
    importpath = "github.com/radek-ryckowski/ssdc/sync",
    visibility = ["//visibility:public"],
    deps = [
        "//cluster",
        "//proto/cache",
        "@com_github_syndtr_goleveldb//leveldb:go_default_library",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
