load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cache_lib",
    srcs = ["main.go"],
    importpath = "github.com/radek-ryckowski/ssdc/cmd/cache",
    visibility = ["//visibility:private"],
    deps = [
        "//cache",
        "//db",
    ],
)

go_binary(
    name = "cache",
    embed = [":cache_lib"],
    visibility = ["//visibility:public"],
)
