load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = ["main.go"],
    importpath = "github.com/radek-ryckowski/ssdc/cmd/client",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/cache",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "github.com/radek-ryckowski/ssdc/examples/client",
    visibility = ["//visibility:private"],
    deps = [
        "//examples/proto/data",
        "//proto/cache",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//keepalive",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
